# waterbus-rs

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  SECURITY.md  diesel.toml  docker-compose.redis.yml  docker-compose.yml  dockerfile  example.env  hls-live.html  justfile  shema.sql
.github/workflows/: cargo.yml  ci.yaml
certificates/: cert.pem  digest.txt  key.pem
crates/dispatcher/: Cargo.toml
crates/dispatcher/src/: dispatcher_manager.rs  lib.rs
crates/dispatcher/src/application/: dispatcher_grpc_service.rs  mod.rs  sfu_grpc_client.rs
crates/dispatcher/src/domain/: mod.rs
crates/dispatcher/src/infrastructure/: mod.rs
crates/dispatcher/src/infrastructure/cache/: cache.rs  cache_manager.rs  mod.rs
crates/dispatcher/src/infrastructure/etcd/: mod.rs
crates/dispatcher/src/infrastructure/grpc/: grpc.rs  grpc_server.rs
crates/egress-manager/: Cargo.toml
crates/egress-manager/src/egress/: gst_utils.rs  hls_writer.rs  mod.rs  moq_writer.rs  temp.rs
crates/egress-manager/src/egress/utils/: audio_stream.rs  aws_utils.rs  cloud_master_playlist.rs  cloud_upload.rs  mod.rs  playlist.rs  segment.rs  state.rs  video_stream.rs
crates/rtc-manager/: Cargo.toml  MIGRATION_SUMMARY.md
crates/rtc-manager/src/: errors.rs  lib.rs  rtc_manager.rs
crates/rtc-manager/src/entities/: media.rs  mod.rs  publisher.rs  room.rs  subscriber.rs  track.rs
crates/rtc-manager/src/errors/: mod.rs
crates/rtc-manager/src/models/: callbacks.rs  connection_type.rs  input_params.rs  mod.rs  params.rs  quality.rs  quality_subscribed_message.rs  rtc_dto.rs  rtp_forward_info.rs  streaming_protocol.rs  track_quality_request.rs
crates/rtc-manager/src/services/: mod.rs  publisher_messenger.rs  quality_manager.rs  subscriber_messenger.rs  udp_socket_manager.rs
crates/rtc-manager/src/utils/: ice_utils.rs  mod.rs  sdp_utils.rs  str0m_helpers.rs  udp_runtime.rs
crates/typesense-client/: Cargo.toml
crates/waterbus-proto/: Cargo.toml  build.rs
crates/waterbus-proto/proto/: common.proto  dispatcher.proto  sfu.proto
crates/waterbus-proto/src/: lib.rs
crates/webrtc-manager/: Cargo.toml
crates/webrtc-manager/src/: lib.rs  room.rs  rtc_manager.rs  webrtc_manager.rs
crates/webrtc-manager/src/entities/: forward_track.rs  media.rs  mod.rs  publisher.rs  quality.rs  room.rs  subscriber.rs  track.rs
crates/webrtc-manager/src/errors/: mod.rs
crates/webrtc-manager/src/models/: connection_type.rs  data_channel_msg.rs  input_params.rs  mod.rs  params.rs  quality.rs  rtp_foward_info.rs  streaming_protocol.rs
crates/webrtc-manager/src/services/: media_monitor.rs  mod.rs  publisher_messenger.rs  track_monitor.rs
crates/webrtc-manager/src/utils/: mod.rs  multicast_sender.rs  read_socket_input.rs
docker/: Cargo.toml.sfu  Cargo.toml.signalling  dockerfile.sfu  dockerfile.signalling
egress-manager/: Cargo.toml
egress-manager/src/egress/: moq_writer.rs
migrations/2025-04-18-044620_create_all_tables/: down.sql
migrations/2025-07-15-120755_init_schema/: down.sql  up.sql
migrations/2025-07-23-192442_add_capacity_streaming_protocol_to_rooms/: down.sql  up.sql
public/: hls-live.html
sfu/: Cargo.toml
sfu/src/: main.rs
sfu/src/application/: dispacher_grpc_client.rs  mod.rs  sfu_grpc_service.rs
sfu/src/infrastructure/: mod.rs
sfu/src/infrastructure/config/: app_env.rs
sfu/src/infrastructure/etcd/: mod.rs
sfu/src/infrastructure/grpc/: grpc.rs  mod.rs
signalling/: Cargo.toml
signalling/src/: main.rs
signalling/src/core/api/: config.rs  mod.rs  salvo_config.rs
signalling/src/core/database/: db.rs  schema.rs
signalling/src/core/dtos/: mod.rs
signalling/src/core/dtos/auth/: create_token_dto.rs  login_dto.rs  mod.rs
signalling/src/core/dtos/chat/: mod.rs  send_message_dto.rs
signalling/src/core/dtos/common/: mod.rs
signalling/src/core/dtos/meeting/: join_meeting_dto.rs  mod.rs
signalling/src/core/dtos/room/: create_room_dto.rs  join_room_dto.rs  mod.rs  update_room_dto.rs
signalling/src/core/dtos/socket/: socket_dto.rs
signalling/src/core/dtos/user/: mod.rs
signalling/src/core/entities/: models.rs
signalling/src/core/env/: app_env.rs  env_config.rs  mod.rs
signalling/src/core/socket/: mod.rs  socket.rs
signalling/src/core/types/: app_channel.rs  mod.rs
signalling/src/core/types/enums/: mod.rs  socket_event.rs  ws_event.rs
signalling/src/core/types/errors/: auth_error.rs  chat_error.rs  general.rs  meeting_error.rs  mod.rs  room_error.rs  user_error.rs
signalling/src/core/types/res/: message_response.rs  mod.rs  room_response.rs  socket_response.rs
signalling/src/core/types/responses/: auth_response.rs  check_username_response.rs  failed_response.rs  ice_response.rs  list_message_response.rs  list_room_response.rs  message_response.rs  mod.rs  presigned_url_response.rs  room_response.rs  socket_response.rs  user_response.rs
signalling/src/core/utils/: api_key_utils.rs  aws_utils.rs  bcrypt_utils.rs  id_utils.rs  jwt_utils.rs  mod.rs  try_from_i16.rs
signalling/src/features/: mod.rs
signalling/src/features/auth/: repository.rs  router.rs  service.rs
signalling/src/features/ccu/: repository.rs
signalling/src/features/chat/: repository.rs  router.rs  service.rs
signalling/src/features/meeting/: repository.rs  service.rs
signalling/src/features/room/: repository.rs  router.rs  service.rs
signalling/src/features/search/: mod.rs
signalling/src/features/sfu/: service.rs
signalling/src/features/user/: repository.rs  router.rs  service.rs
src/: main.rs
src/core/: mod.rs
src/core/api/: config.rs  salvo_config.rs
src/core/database/: db.rs  mod.rs  repository.rs  schema.rs
src/core/dtos/: mod.rs  pagination_dto.rs
src/core/entities/: models.rs
src/core/env/: env_config.rs  (+1 more)
src/features/: mod.rs
typesense-client/: Cargo.toml
typesense-client/src/: lib.rs
webrtc-manager/: Cargo.toml
webrtc-manager/src/: room.rs  webrtc_manager.rs
webrtc-manager/src/entities/: media.rs  mod.rs  participant.rs  publisher.rs  subscriber.rs  track.rs
webrtc-manager/src/errors/: mod.rs
webrtc-manager/src/models/: mod.rs
(+49 files in other folders)
