[package]
name = "waterbus-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "*", features = [
    "quinn",
    "tower-compat",
    "oapi",
    "affix-state",
    "jwt-auth",
    "logging",
    "rate-limiter",
    "catch-panic",
    "caching-headers",
    "compression",
    "cors",
    "serve-static",
] }
serde = "1.0.219"
socketioxide = { version = "0.16.2", features = ["extensions", "state"] }
socketioxide-redis = "0.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.0", default-features = false }
tower-http = { version = "0.6.2", features = ["cors", "fs", "auth"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
time = "0.3.41"
jsonwebtoken = "9.3.1"
anyhow = "1.0.97"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
validator = "0.20.0"
validator_derive = "0.20.0"
aws-sdk-s3 = { version = "1.82.0", features = ["rt-tokio"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
uuid = "1.16.0"
rustls = { version = "0.23.25", features = ["ring"] }
nanoid = "0.4.0"
rand = "0.9.0"
serde_json = "1.0.140"
bcrypt = "0.17.0"
async-channel = "2.3.1"
webrtc-manager = { path = "./webrtc-manager" }
typesense-client = { path = "./typesense-client" }
egress-manager = { path = "./egress-manager" }
rust-embed = "8.7.0"
