[workspace]
members = [
    "signalling",
    "sfu",
    "crates/egress-manager",
    "crates/webrtc-manager",
    "crates/waterbus-proto",
    "crates/dispatcher",
]
resolver = "2"

[workspace.dependencies]
salvo = { version = "0.78.0", features = [
    "quinn",
    "tower-compat",
    "oapi",
    "affix-state",
    "jwt-auth",
    "logging",
    "rate-limiter",
    "catch-panic",
    "caching-headers",
    "compression",
    "cors",
    "serve-static",
] }
serde = "1.0.219"
socketioxide = { version = "0.16.2", features = [
    "extensions",
    "state",
    "msgpack",
] }
socketioxide-redis = "0.2.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tower = { version = "0.5.0", default-features = false }
tower-http = { version = "0.6.2", features = ["cors", "fs", "auth"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
time = "0.3.41"
jsonwebtoken = "9.3.1"
anyhow = "1.0.97"
thiserror = "2.0.12"
validator = "0.20.0"
validator_derive = "0.20.0"
aws-sdk-s3 = { version = "1.82.0", features = ["rt-tokio"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.3"
uuid = "1.16.0"
rustls = { version = "0.23.26", features = ["ring"] }
nanoid = "0.4.0"
rand = "0.9.1"
serde_json = "1.0.140"
bcrypt = "0.17.0"
async-channel = "2.3.1"
rust-embed = "8.7.0"
dashmap = "6.1.0"
parking_lot = "0.12.3"
webrtc = "0.12.0"
gst = { package = "gstreamer", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-app = { package = "gstreamer-app", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-video = { package = "gstreamer-video", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-base = { package = "gstreamer-base", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_20",
] }
m3u8-rs = { git = "https://github.com/JeWe37/m3u8-rs", branch = "ll-hls" }
moq-gst = { git = "https://github.com/waterbustech/moq-gst.git", branch = "main" }
gst-plugin-fmp4 = "0.13.5"
prost = "0.13.5"
tonic = "0.13.0"
etcd-client = "0.15.0"
sysinfo = "0.35.0"
futures-util = "0.3.31"
redis = "0.30.0"

# Local crates
waterbus-proto = { path = "./crates/waterbus-proto" }
webrtc-manager = { path = "./crates/webrtc-manager" }
egress-manager = { path = "./crates/egress-manager" }
dispatcher = { path = "./crates/dispatcher" }
