[workspace]
members = [
    "signalling",
    "sfu",
    "crates/egress-manager",
    "crates/webrtc-manager",
    "crates/waterbus-proto",
    "crates/dispatcher",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
salvo = { version = "0.81.0", features = [
    "quinn",
    "tower-compat",
    "oapi",
    "affix-state",
    "jwt-auth",
    "logging",
    "rate-limiter",
    "catch-panic",
    "caching-headers",
    "compression",
    "cors",
    "serve-static",
] }
serde = "1.0.219"
socketioxide = { version = "0.17.1", features = [
    "extensions",
    "state",
    "msgpack",
] }
socketioxide-redis = { version = "0.2.2", features = ["redis-cluster"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.4", features = ["cors", "fs", "auth"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
time = "0.3.41"
jsonwebtoken = "9.3.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
validator = "0.20.0"
validator_derive = "0.20.0"
aws-sdk-s3 = { version = "1.98.0", features = ["rt-tokio"] }
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
rustls = { version = "0.23.27", features = ["ring"] }
nanoid = "0.4.0"
rand = "0.9.2"
serde_json = "1.0.141"
bcrypt = "0.17.0"
async-channel = "2.5.0"
rust-embed = "8.7.2"
dashmap = "6.1.0"
parking_lot = "0.12.4"
webrtc = "0.13.0"
gst = { package = "gstreamer", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-app = { package = "gstreamer-app", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-video = { package = "gstreamer-video", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-audio = { package = "gstreamer-audio", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-base = { package = "gstreamer-base", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://github.com/GStreamer/gstreamer-rs", branch = "main", features = [
    "v1_20",
] }
m3u8-rs = { git = "https://github.com/JeWe37/m3u8-rs", branch = "ll-hls" }
moq-gst = { git = "https://github.com/waterbustech/moq-gst.git", branch = "main" }
gst-plugin-fmp4 = "0.14.0"
prost = "0.13.5"
tonic = "0.13.1"
etcd-client = "0.15.0"
sysinfo = "0.36.1"
futures-util = "0.3.31"
deadpool-redis = "0.22.0"
redis = { version = "0.32.4", features = ["cluster"] }
futures = "0.3.31"
crossbeam = "0.8.4"
mimalloc = "0.1.46"
bytes = "1.10.1"

# Local crates
waterbus-proto = { path = "./crates/waterbus-proto" }
webrtc-manager = { path = "./crates/webrtc-manager" }
egress-manager = { path = "./crates/egress-manager" }
dispatcher = { path = "./crates/dispatcher" }
