[package]
name = "egress-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_18",
] }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = [
    "v1_20",
] }
m3u8-rs = { git = "https://github.com/JeWe37/m3u8-rs", branch = "ll-hls" }
chrono = "0.4.40"
gst-plugin-fmp4 = "0.13.5"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = ["full"] }
moq-gst = { path = "/Users/lambiengcode/Documents/moq-gst" }
