[package]
name = "webrtc-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dashmap = "6.1.0"
parking_lot = "0.12.3"
rand = "0.9.0"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
uuid = "1.16.0"
webrtc = "0.12.0"
egress-manager = { path = "../egress-manager" }
