[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
etcd-client = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
waterbus-proto = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
redis = { workspace = true }
