[package]
name = "rtc-manager"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
nanoid = { workspace = true }
egress-manager = { workspace = true }
kanal = { workspace = true }
bytes = { workspace = true }
str0m = { path = "../str0m" }
systemstat = "=0.2.5"
