[package]
name = "webrtc-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
webrtc = { workspace = true }
egress-manager = { workspace = true }
