[package]
name = "webrtc-manager"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
nanoid = { workspace = true }
str0m = "0.1.0"
egress-manager = { workspace = true }
kanal = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
mockall = "0.13.1"
